--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <a href="./3/index.html">Project 3</a>
     <a href="./4a/index.html">Project 4</a>
     <a href="./5/index.html">Project 5</a>
+    <a href="./final/index.html">Final Project</a>
+
 </body>
 </html>
