--- a/final/index.html
+++ b/final/index.html
@@ -1,4 +1,5 @@
 <h1 id="introduction">Introduction</h1>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <p>“Where am I?” Accurately determining one’s location is critical for
 navigation and safety. Current systems usually rely on GPS to locate
 one’s position. However, GPS may struggle in environments with poor
@@ -80,14 +81,14 @@ comprehensively cover various photos, thereby enhancing the robustness
 of our model.</p>
 <p>We collected 2 datasets. The first one is along Telegraph Avenue, the
 400m segment from Bancroft Way to Dwight Way. The latitude ranges from
-[37.8652, 37.8687], and the longitude ranges from [, ]. We set a data
+[37.8652, 37.8687], and the longitude ranges from [−122.2592, −122.2585]. We set a data
 point every 5 meters and downloaded 8 street views facing different
 directions (mostly east and west because buildings are located on these
 two sides) and with different fields of view. There are total of 608
 images in this dataset.</p>
 <p>The first dataset is along Channing Way, the 770m segment from
 Shattuck Avenue to Telegraph Avenue. The latitude ranges from [37.8658,
-37.8668], and the longitude ranges from [, ]. We set a data point every
+37.8668], and the longitude ranges from [−122.2673, −122.2589]. We set a data point every
 7 meters and downloaded 8 street views facing different directions
 (mostly north and south because buildings are located on these two
 sides) and with different fields of view. There are total of 832 images
